# amd-lcd-lib

./: CMakeLists.txt  README.md  amd-lcd-lib.pc
cmake_modules/: utils.cmake
example/: lcdlib_tool.c
include/lcdlib/: lcdlib_common.h  lcdlib_common_oled.h
src/lcdlib/: lcdlib_common.c  lcdlib_common_oled.c
